# trip-sage

./: .gitignore  README.md  pyproject.toml
src/trip_sage/: config.py  endpoints.py  exception_handlers.py  log.py  logging.json  main.py  openai.py  schemas.py
src/trip_sage/di/: __init__.py  providers.py  setup.py
src/trip_sage/persistence/: models.py  repositories.py  setup.py
src/trip_sage/services/: recommendation.py
